修改博客页面的跳转链接

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li class="hide-on-med-and-down nav-item">
-                    <a href="blog.html" class="waves-effect waves-light" target="_blank">
+                    <a href="/blog.html" class="waves-effect waves-light" target="_blank">
                         <i class="fa fa-book"></i>
                         <span>博客</span>
                     </a>
@@ -93,7 +93,7 @@
                     </li>
 
                     <li class="m-nav-item">
-                        <a href="blog.html" class="waves-effect waves-light">
+                        <a href="/blog.html" class="waves-effect waves-light">
                             <i class="fa fa-book"></i>博客
                         </a>
                     </li>
@@ -320,7 +320,7 @@
                             <div class="col s5 right-align">
                                 <div class="post-cate">
                                     <i class="fa fa-bookmark fa-fw icon-category"></i>
-                                    <a href="blog.html" class="post-category" target="_blank" th:utext="${article.category.name}"></a>
+                                    <a href="/blog.html" class="post-category" target="_blank" th:utext="${article.category.name}"></a>
                                 </div>
 
                             </div>
