文件上传支持 fix 文章详情页跳转链接错误

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -36,7 +36,7 @@
     <nav id="headNav" class="bg-color">
         <div id="navContainer" class="nav-wrapper container">
             <div class="brand-logo">
-                <a href="index.html" class="waves-effect waves-light">
+                <a href="../index.html" class="waves-effect waves-light">
                     <img src="//cdn.smallyoung.cn/libs/image/logo.png" class="logo-img" alt="LOGO">
                     <span class="logo-span">SmallYoung</span>
                 </a>
@@ -45,13 +45,13 @@
                     class="fa fa-bars"></i></a>
             <ul class="right nav-menu">
                 <li class="hide-on-med-and-down nav-item">
-                    <a href="index.html" class="waves-effect waves-light" target="_blank">
+                    <a href="../index.html" class="waves-effect waves-light" target="_blank">
                         <i class="fa fa-home"></i>
                         <span>首页</span>
                     </a>
                 </li>
                 <li class="hide-on-med-and-down nav-item">
-                    <a href="/blog.html" class="waves-effect waves-light" target="_blank">
+                    <a href="../blog.html" class="waves-effect waves-light" target="_blank">
                         <i class="fa fa-book"></i>
                         <span>博客</span>
                     </a>
@@ -63,7 +63,7 @@
                 <!--                    </a>-->
                 <!--                </li>-->
                 <li class="hide-on-med-and-down nav-item">
-                    <a href="about.html" class="waves-effect waves-light" target="_blank">
+                    <a href="../about.html" class="waves-effect waves-light" target="_blank">
                         <i class="fa fa-user-circle"></i>
                         <span>关于</span>
                     </a>
@@ -87,13 +87,13 @@
 
                 <ul class="menu-list mobile-menu-list">
                     <li class="m-nav-item">
-                        <a href="index.html" class="waves-effect waves-light">
+                        <a href="../index.html" class="waves-effect waves-light">
                             <i class="fa fa-home"></i>首页
                         </a>
                     </li>
 
                     <li class="m-nav-item">
-                        <a href="/blog.html" class="waves-effect waves-light">
+                        <a href="../blog.html" class="waves-effect waves-light">
                             <i class="fa fa-book"></i>博客
                         </a>
                     </li>
@@ -103,7 +103,7 @@
                     <!--                        </a>-->
                     <!--                    </li>-->
                     <li class="m-nav-item">
-                        <a href="about.html" class="waves-effect waves-light">
+                        <a href="../about.html" class="waves-effect waves-light">
                             <i class="fa fa-user-circle-o"></i>关于
                         </a>
                     </li>
