推荐文章接口

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -219,7 +219,7 @@
 
 <!-- 回到顶部按钮 -->
 <div id="backTop" class="top-scroll" style="display: block;">
-    <a class="btn-floating btn-large waves-effect waves-light" href="https://blinkfox.github.io/#!">
+    <a class="btn-floating btn-large waves-effect waves-light" href="javascript:void(0);">
         <i class="fa fa-arrow-up"></i>
     </a>
 </div>
