--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -130,7 +130,18 @@
             .github-corner .octo-arm {
                 animation: none;
             }
-
+            .recommendedArticles0{
+                background:linear-gradient(to right, #FF5E3A 0%, #FF2A68 100%);
+            }
+            .recommendedArticles1{
+                background:linear-gradient(to right, #EF4DB6 0%, #C643FC 100%);
+            }
+            .recommendedArticles2{
+                background:linear-gradient(to right, #1AD6FD 0%, #1D62F0 100%);
+            }
+            .recommendedArticles3{
+                background:linear-gradient(to right, #FFCC00 0%, #FF9500 100%);
+            }
             @keyframes a {
 
                 0%,
@@ -313,16 +324,14 @@
                         <script id="recommendedArticlesTemplate" type="text/html">
                             {{#  $.each(d, function(index, item){ }}
                             <div class="col s12 m6">
-                                <div class="post-card"
-                                     style="background-image: url({{ item.img }})">
+                                <div class="post-card" style="background-image: url({{ item.coverUrl }})">
                                     <div class="post-body">
                                         <a target="_blank" href="{{ item.link }}">
                                             <h3 class="post-title">{{ item.title }}</h3>
                                         </a>
                                         <p class="post-description" style="overflow: hidden;">{{ item.introduction }}</p>
-                                        <a target="_blank" href="{{ item.link }}"
-                                           class="read-more btn waves-effect waves-light"
-                                           style="background: {{ item.background }}" target="_blank">
+                                        <a target="_blank" href="//www.smallyoung.cn/article/{{ item.id }}.html"
+                                           class="read-more btn waves-effect waves-light recommendedArticles{{ index%4 }}" target="_blank">
                                             <i class="icon fa fa-eye fa-fw"></i>阅读详情
                                         </a>
                                     </div>
@@ -331,8 +340,8 @@
                             {{#  }); }}
                         </script>
                         <script type="text/javascript">
-                            $.get("//cdn.smallyoung.cn/data/recommended_articles.json", function (data) {
-                                laytpl($("#recommendedArticlesTemplate").html()).render(data, function (html) {
+                            $.get("//api.smallyoung.cn/web/findRecommendArticle", function (res) {
+                                laytpl($("#recommendedArticlesTemplate").html()).render(res.data, function (html) {
                                     $("#recommendedArticles").html(html);
                                 });
                             });
