--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -11,11 +11,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <meta name="keywords" content="SmallYoung">
-    <meta name="description" content="SmallYoung"/>
-    <meta name="author" content="SmallYoung"/>
-    <meta name="robots" content="index,follow">
-
     <title>SmallYoung</title>
     <link rel="icon" type="image/png" href="//cdn.smallyoung.cn/libs/image/logo.png">
 
@@ -28,10 +23,9 @@
     <link rel="stylesheet" type="text/css" href="//cdn.smallyoung.cn/libs/css/my.css">
 
     <script src="//cdn.smallyoung.cn/libs/js/jquery-3.5.1.min.js"></script>
-    <script src="/js/comment.js"></script>
+    <script src="js/comment.js"></script>
 
     <link rel="stylesheet" href="//cdn.smallyoung.cn/libs/css/prism-tomorrow.css" type="text/css">
-
 </head>
 
 
@@ -39,8 +33,7 @@
 
 <header class="navbar-fixed" th:include="common :: header"></header>
 
-<div class="bg-cover pd-header about-cover"
-     style="background-image: url(&quot;//cdn.smallyoung.cn/libs/image/0.jpg&quot;);">
+<div class="bg-cover pd-header about-cover" style="background-image: url(&quot;//cdn.smallyoung.cn/libs/image/0.jpg&quot;);">
     <div class="container">
         <div class="row">
             <div class="col s10 offset-s1 m8 offset-m2 l8 offset-l2">
@@ -66,16 +59,6 @@
     </div>
 </div>
 <style type="text/css" data-typed-js-css="true">
-    .typed-cursor {
-        opacity: 1;
-    }
-
-    .typed-cursor.typed-cursor--blink {
-        animation: typedjsBlink 0.7s infinite;
-        -webkit-animation: typedjsBlink 0.7s infinite;
-        animation: typedjsBlink 0.7s infinite;
-    }
-
     @keyframes typedjsBlink {
         50% {
             opacity: 0.0;
@@ -96,15 +79,13 @@
         }
     }
 </style>
-<main class="content" style="min-height: 501px;">
+
+<main class="content" style="min-height: 507px;">
     <div id="category-cloud" class="container chip-container">
         <div class="card">
             <div class="card-content">
-                <div class="tag-title center-align">
-                    <i class="fa fa-bookmark"></i>&nbsp;&nbsp;文章分类
-                </div>
-                <div class="tag-chips">
-                    <a th:href="${item.id}+'/1.html'" th:each=" item : ${categories}">
+                <div class="tag-chips" id="categories">
+                    <a th:href="'/'+${item.id}+'/1.html'" th:each=" item : ${categories}">
                         <span class="chip center-align waves-effect waves-light chip-default categories-span" th:attr="id=${item.id}"
                               th:style = "'background-color:'+${item.backgroundColor}">
                            [[${item.name}]] <span class="tag-length" th:text="${item.count}"></span>
@@ -114,68 +95,75 @@
             </div>
         </div>
     </div>
+    <article id="articles" class="container articles">
+        <div class="row tags-posts" id="blogs">
+            <div class="article tag-post col s12 m6 l4" data-aos="zoom-in" th:each=" item : ${data}">
+                <div class="card">
+                    <a th:href="'/article/'+${item.id}+'.html'">
+                        <div class="card-image tag-image">
+                            <img th:src="@{${item.coverUrl}}" class="responsive-img" th:attr="alt=${item.title}">
+                            <span class="card-title" th:text="${item.title}"></span>
+                        </div>
+                    </a>
+                    <div class="card-content article-content">
+                        <div class="summary block-with-text" th:utext="${item.introduction}"></div>
+                        <div class="publish-info">
+                            <span class="publish-date">
+                                <i class="far fa-clock fa-fw icon-date"></i> [[${item.createTime}]]
+                            </span>
+                            <span class="publish-author">
+                                <i class="fa fa-bookmark fa-fw icon-category"></i>
+                                <a href="javascript:void(0);" class="post-category" th:utext="${item.category.name}"></a>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card-action article-tags" th:if="${item.tags} != null">
+                        <a href="javascript:void(0);" th:each="tag : ${item.tags}">
+                            <span class="chip bg-color" th:utext="${tag}"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </article>
+</main>
 
-    <style type="text/css">
-        #category-radar {
-            width: 100%;
-            height: 360px;
-        }
-    </style>
-
-    <div class="container aos-init aos-animate" data-aos="fade-up">
-        <div class="card">
-            <div id="category-radar" class="card-content"></div>
+<div class="container paging" th:if="${page} > 1">
+    <div class="row">
+        <div class="col s6 m4 l4">
+            <a th:href="@{${pageNo} - 1 + '.html'}" class="left btn-floating btn-large waves-effect waves-light bg-colo" th:if="${pageNo} > 1">
+                <i class="fa fa-angle-left"></i>
+            </a>
+            <a class="left disabled btn-floating btn-large" th:if="${pageNo} == 1">
+                <i class="fa fa-angle-left"></i>
+            </a>
+        </div>
+        <div class="page-info col m4 l4 hide-on-small-only">
+            <div class="center-align b-text-gray" th:text="${pageNo} + '/' + ${page}"></div>
+        </div>
+        <div class="col s6 m4 l4">
+            <a th:href="@{${pageNo} + 1 + '.html'}" class="right btn-floating btn-large waves-effect waves-light bg-color" th:if="${pageNo} < ${page}">
+                <i class="fa fa-angle-right"></i>
+            </a>
+            <a class="right disabled btn-floating btn-large" th:if="${pageNo} == ${page}">
+                <i class="fa fa-angle-right"></i>
+            </a>
         </div>
     </div>
+</div>
 
-    <script type="text/javascript" src="//cdn.smallyoung.cn/libs/js/echarts.min.js"></script>
-    <script type="text/javascript">
-        let radarChart = echarts.init(document.getElementById('category-radar'));
+<div class="container paging">
+    <div class="row">
 
-        let option = {
-            title: {
-                left: 'center',
-                text: '文章分类雷达图',
-                textStyle: {
-                    fontWeight: 500,
-                    fontSize: 22
-                }
-            },
-            tooltip: {},
-            radar: {
-                name: {
-                    textStyle: {
-                        color: '#3C4858'
-                    }
-                },
-                indicator: [{"name": "JAVA", "max": 35}, {"name": "数据库", "max": 15}, {"name": "前端", "max": 3}, {"name": "其他", "max": 20}],
-                nameGap: 5,
-                center: ['50%', '55%'],
-                radius: '66%'
-            },
-            series: [{
-                type: 'radar',
-                color: ['#3ecf8e'],
-                itemStyle: {normal: {areaStyle: {type: 'default'}}},
-                data: [
-                    {
-                        value: [23, 9, 1, 8],
-                        name: '文章分类数量'
-                    }
-                ]
-            }]
-        };
-
-        radarChart.setOption(option);
-    </script>
-</main>
+    </div>
+</div>
 
 <footer class='page-footer bg-color' th:include="common :: footer"></footer>
 
 <!-- 回到顶部按钮 -->
 <div id="backTop" class="top-scroll" style="display: none;">
-    <a class="btn-floating btn-large waves-effect waves-light" href="http://blinkfox.com/categories#!">
-        <i class="fas fa-arrow-up"></i>
+    <a class="btn-floating btn-large waves-effect waves-light" href="https://blinkfox.github.io/#!">
+        <i class="fa fa-arrow-up"></i>
     </a>
 </div>
 
@@ -190,10 +178,10 @@
 
 <script src="//cdn.smallyoung.cn/libs/js/instantpage.js" type="module"></script>
 
-<canvas width="1920" height="902" style="opacity: 0.6; position: fixed; top: 0px; left: 0px; z-index: -1; width: 100%; height: 100%; pointer-events: none;"></canvas>
+<canvas width="1920" height="840"
+        style="opacity: 0.6; position: fixed; top: 0px; left: 0px; z-index: -1; width: 100%; height: 100%; pointer-events: none;"></canvas>
 <div class="sidenav-overlay"></div>
 <div class="drag-target"></div>
-<div class="layui-xzxform-label"></div>
 </body>
 
 </html>
