--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
+
+    <meta name="keywords" content="SmallYoung">
+    <meta name="description" content="SmallYoung"/>
+    <meta name="author" content="SmallYoung"/>
+    <meta name="robots" content="index,follow">
+
     <title>SmallYoung</title>
     <link rel="icon" type="image/png" href="//cdn.smallyoung.cn/libs/image/logo.png">
 
@@ -31,149 +37,7 @@
 
 <body data-aos-easing="ease-in-out-sine" data-aos-duration="700" data-aos-delay="100">
 
-<header class='navbar-fixed'>
-    <nav id='headNav' class='bg-color'>
-        <div id='navContainer' class='nav-wrapper container'>
-            <div class='brand-logo'>
-                <a href='/index.html' class='waves-effect waves-light'>
-                    <img src='//cdn.smallyoung.cn/libs/image/logo.png' class='logo-img' alt='LOGO'>
-                    <span class='logo-span'>SmallYoung</span>
-                </a>
-            </div>
-            <a href='javascript:void(0);' data-target='mobile-nav' class='sidenav-trigger button-collapse'><i
-                    class='fa fa-bars'></i></a>
-            <ul class='right nav-menu'>
-                <li class='hide-on-med-and-down nav-item'>
-                    <a href='/index.html' class='waves-effect waves-light'>
-                        <i class='fa fa-home'></i>
-                        <span>首页</span>
-                    </a>
-                </li>
-                <li class='hide-on-med-and-down nav-item'>
-                    <a href='/blog.html' class='waves-effect waves-light'>
-                        <i class='fa fa-book'></i>
-                        <span>博客</span>
-                    </a>
-                </li>
-                <li class='hide-on-med-and-down nav-item'>
-                    <a href='/about.html' class='waves-effect waves-light'>
-                        <i class='fa fa-user-circle'></i>
-                        <span>关于</span>
-                    </a>
-                </li>
-            </ul>
-
-            <div id='mobile-nav' class='side-nav sidenav'>
-                <div class='mobile-head bg-color'>
-                    <img src='//cdn.smallyoung.cn/libs/image/logo.png' class='logo-img circle responsive-img'>
-                    <div class='logo-name'>SmallYoung</div>
-                    <div class='logo-desc'>
-                        命运掌握在自己手中
-                    </div>
-                </div>
-
-                <ul class='menu-list mobile-menu-list'>
-                    <li class='m-nav-item'>
-                        <a href='/index.html' class='waves-effect waves-light'>
-                            <i class='fa fa-home'></i>首页
-                        </a>
-                    </li>
-
-                    <li class='m-nav-item'>
-                        <a href='/blog.html' class='waves-effect waves-light'>
-                            <i class='fa fa-book'></i>博客
-                        </a>
-                    </li>
-                    <li class='m-nav-item'>
-                        <a href='/about.html' class='waves-effect waves-light'>
-                            <i class='fa fa-user-circle-o'></i>关于
-                        </a>
-                    </li>
-                    <li>
-                        <div class='divider'></div>
-                    </li>
-                    <li>
-                        <a href='https://github.com/yjiace/website-admin' class='waves-effect waves-light'
-                        >
-                            <i class='fa fa-github-square fa-fw'></i>Fork Me
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <style>
-            .nav-transparent .github-corner {
-                display: none !important;
-            }
-
-            .github-corner {
-                position: absolute;
-                z-index: 10;
-                top: 0;
-                right: 0;
-                border: 0;
-                transform: scale(1.1);
-            }
-
-            .github-corner svg {
-                color: #0f9d58;
-                fill: #fff;
-                height: 64px;
-                width: 64px;
-            }
-
-            .github-corner:hover .octo-arm {
-                animation: a 0.56s ease-in-out;
-            }
-
-            .github-corner .octo-arm {
-                animation: none;
-            }
-            .recommendedArticles0{
-                background:linear-gradient(to right, #FF5E3A 0%, #FF2A68 100%);
-            }
-            .recommendedArticles1{
-                background:linear-gradient(to right, #EF4DB6 0%, #C643FC 100%);
-            }
-            .recommendedArticles2{
-                background:linear-gradient(to right, #1AD6FD 0%, #1D62F0 100%);
-            }
-            .recommendedArticles3{
-                background:linear-gradient(to right, #FFCC00 0%, #FF9500 100%);
-            }
-            @keyframes a {
-
-                0%,
-                to {
-                    transform: rotate(0);
-                }
-
-                20%,
-                60% {
-                    transform: rotate(-25deg);
-                }
-
-                40%,
-                80% {
-                    transform: rotate(10deg);
-                }
-            }
-        </style>
-
-        <a href='https://github.com/yjiace/website-admin' class='github-corner tooltipped hide-on-med-and-down'
-           data-tooltip='Fork Me'
-           data-position='left' data-delay='50'>
-            <svg viewBox='0 0 250 250' aria-hidden='true'>
-                <path d='M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z'></path>
-                <path d='M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2'
-                      fill='currentColor' style='transform-origin: 130px 106px;' class='octo-arm'></path>
-                <path d='M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z'
-                      fill='currentColor' class='octo-body'></path>
-            </svg>
-        </a>
-    </nav>
-</header>
+<header class="navbar-fixed" th:include="common :: header"></header>
 
 <div class="carousel carousel-slider center index-cover" data-indicators="true"
      style="margin-top: -64px; height: 721.6px;">
@@ -300,7 +164,6 @@
     });
 </script>
 
-
 <main class="content" style="min-height: 507px;">
     <div id="indexCard" class="index-card">
         <div class="container ">
@@ -353,20 +216,7 @@
     </div>
 </main>
 
-<footer class='page-footer bg-color'>
-    <div class='container row center-align' style='margin-bottom: 15px !important;'>
-        <div class='col s12 m12 l12'>
-            <div> © <a href='https://beian.miit.gov.cn/' target='_blank'> 冀ICP备17000836号-2 </a>  |
-                <img src='//cdn.smallyoung.cn/libs/image/beian.png' alt='冀公网安备 13018102000160号'  style='vertical-align:middle;'>
-                <a target='_blank' href='http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=13018102000160'>冀公网安备 13018102000160号</p></a>
-            </div>
-            本站由 <a href='https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral/' target='_blank'>
-            <img src='//cdn.smallyoung.cn/libs/image/upyun.png' style='width: 65px;margin-bottom: -11.5px;'/></a>
-            提供CND加速/云存储服务
-        </div>
-    </div>
-</footer>
-
+<footer class='page-footer bg-color' th:include="common :: footer"></footer>
 
 <!-- 回到顶部按钮 -->
 <div id="backTop" class="top-scroll" style="display: block;">
@@ -386,9 +236,7 @@
 
 <script src="//cdn.smallyoung.cn/libs/js/instantpage.js" type="module"></script>
 
-
-<canvas width="1920" height="902"
-        style="opacity: 0.6; position: fixed; top: 0px; left: 0px; z-index: -1; width: 100%; height: 100%; pointer-events: none;"></canvas>
+<canvas width="1920" height="902" style="opacity: 0.6; position: fixed; top: 0px; left: 0px; z-index: -1; width: 100%; height: 100%; pointer-events: none;"></canvas>
 <div class="sidenav-overlay"></div>
 <div class="drag-target"></div>
 </body>
