fix 静态化查询问题 图片上传不在本地保存

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -171,11 +171,11 @@
                 <div class="card-content">
                     <div class="dream">
                         <div class="title center-align">
-                            <i class="fa fa-lightbulb-o"></i>&nbsp;&nbsp;我的梦想
+                            <i class="fa fa-lightbulb-o"></i>&nbsp;&nbsp;人生哲理
                         </div>
                         <div class="row">
                             <div class="col l8 offset-l2 m10 offset-m1 s10 offset-s1 center-align text">
-                                不是每个人都应该像我这样去建造一座水晶大教堂，但是每个人都应该拥有自己的梦想，设计自己的梦想，追求自己的梦想，实现自己的梦想。梦想是生命的灵魂，是心灵的灯塔，是引导人走向成功的信仰。有了崇高的梦想，只要矢志不渝地追求，梦想就会成为现实，奋斗就会变成壮举，生命就会创造奇迹。——罗伯·舒乐
+                                这世界并不是所有的东西都符合想象，有些时候，山是水的故事，云是风的故事;也有些时候，星不是夜的故事，情不是爱的故事，许多人走着走着就散了，许多事看着看着就淡了，许多梦做着做着就断了，许多泪流着流着就干了。人生，原本就是风尘中的沧海桑田，只是，回眸处，世态炎凉演绎成了苦辣酸甜。
                             </div>
                         </div>
                     </div>
