--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -85,12 +85,10 @@
         <div class="card">
             <div class="card-content">
                 <div class="tag-chips" id="categories">
-                    <a th:href="'/'+${item.id}+'/1.html'" th:each=" item : ${categories}">
-                        <span class="chip center-align waves-effect waves-light chip-default categories-span" th:attr="id=${item.id}"
-                              th:style = "'background-color:'+${item.backgroundColor}" th:classappend="${item.id eq category.id} ? 'chip-active':''">
-                             [[${item.name}]] <span class="tag-length" th:text="${item.count}"></span>
-                        </span>
-                    </a>
+                    <script src="//cdn.smallyoung.cn/libs/js/category_model.js"></script>
+                    <script th:inline="javascript">
+                        $("#" + [[${category.id}]]).addClass("chip-active");
+                    </script>
                 </div>
             </div>
         </div>
